# kalman

./: -  .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AuthenticationForm.qml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile_tmp  README.md  accelerometerinfowidget.cpp  accelerometerinfowidget.h  accelerometrinfowidget.cpp  accelerometrinfowidget.h  authenticationform.cpp  authenticationform.h  autopilot_selfcheck_ru.ts  autopilotsettingspage.cpp  autopilotsettingspage.h  build.sh  console.cpp  console.h  firmwareuploadpage.cpp  firmwareuploadpage.h  gyroscopeinfowidget.cpp  gyroscopeinfowidget.h  magnetometerinfowidget.cpp  magnetometerinfowidget.h  magnetometrinfowidget.cpp  magnetometrinfowidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mcuinfowidget.cpp  (+3 more)
.github/workflows/: build_and_test.yml
qml/: AuthenticationForm.qml
src/: accelerometerinfowidget.cpp  accelerometerinfowidget.h  accelerometerinfowidget.hpp  apparameterspage.cpp  apparameterspage.h  apparameterspage.hpp  authenticationpage.cpp  authenticationpage.hpp  autopilot.cpp  autopilot.h  autopilot.hpp  autopilotsettingspage.cpp  autopilotsettingspage.h  autopilotsettingspage.hpp  avionicswidget.cpp  avionicswidget.h  avionicswidget.hpp  console.cpp  console.h  console.hpp  crc.cpp  crc.hpp  firmwareuploader.cpp  firmwareuploader.h  firmwareuploader.hpp  firmwareuploadpage.cpp  firmwareuploadpage.h  firmwareuploadpage.hpp  fullsetuppage.cpp  fullsetuppage.hpp  gyroscopeinfowidget.cpp  gyroscopeinfowidget.h  gyroscopeinfowidget.hpp  magnetometerinfowidget.cpp  magnetometerinfowidget.h  magnetometerinfowidget.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  (+17 more)
translations/: autopilot_selfcheck_ru.ts
